:building_construction: Data fetching and providing refacto

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,10 +6,11 @@ header {
     height: 5em;
     align-items: center;
     justify-content: space-between;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 header img {
-    margin-left: 3em;
+    margin-left: 1.5em;
 }
 
 header nav {
