--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,25 +1,18 @@
-header {
-    display: flex;
-    background: black;
-    color: white;
-    width: 100%;
-    height: 5em;
-    align-items: center;
-    justify-content: space-between;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+.welcomeMessage {
+    text-align: left;
 }
 
-header img {
-    margin-left: 1.5em;
+.welcomeMessage h1 {
+    font-size: 2.5rem;
+    font-weight: 600;
+    padding: 0;
+    margin: 0;
 }
 
-header nav {
-    width: 100%;
+.welcomeMessage p {
+    font-weight: 600;
 }
 
-.navigation ul {
-    display: flex;
-    list-style-type: none;
-    justify-content: space-around;
-    font-size: 1.5em;
+.userFirstName {
+    color: #ff0101;
 }
