--- a/src/components/UserMacros/UserMacros.scss
+++ b/src/components/UserMacros/UserMacros.scss
@@ -1,17 +1,4 @@
-.macrosList {
-    position: absolute;
-    right: 5rem;
-    display: flex;
-    flex-direction: column;
-    list-style-type: none;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    gap: 2rem;
-    width: fit-content;
-}
-
-.macrosList li {
+.macrosList--container li {
     display: flex;
     gap: 1rem;
     background: #FBFBFB;
@@ -19,7 +6,7 @@
     border-radius: 5px;
 }
 
-.macrosList li img {
+.macrosList--container li img {
     max-width: 100%;
     max-height: 100%;
 }
@@ -34,10 +21,11 @@
 .macrosLabel p {
     margin: 0;
     font-weight: 700;
+    font-size: 1.5rem;
 }
 
 .macrosLabel label {
     color: #74798C;
-    font-size: .8rem;
+    font-size: 1.25rem;
     font-weight: 600;
 }
