--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -1,22 +1,96 @@
 section {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    width: 100%;
-    padding: 2rem 5rem;
-    row-gap: 2rem;
+    display: grid;
+    // grid-template-columns: 1fr 1fr 1fr;
+    // grid-template-rows: 0.3fr 1.7fr 1fr;
+    // gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+        "welcomeMessage welcomeMessage welcomeMessage"
+        "mainContent mainContent mainContent"
+        "mainContent mainContent mainContent";
+    padding: 4rem 8rem;
 }
 
-.chart-wrapper {
-    display: flex;
-    flex-direction: column;
-    row-gap: 2rem;
-    max-width: 100%;
+.welcomeMessage {
+    grid-area: welcomeMessage;
+    margin-bottom: 2rem;
 }
 
-.chart-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    max-width: 70%;
+.mainContent {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 0px 5rem;
+    grid-auto-flow: row;
+    grid-template-areas:
+        "charts--container macrosList--container"
+        "charts--container macrosList--container";
+    grid-area: mainContent;
 }
+
+.macrosList--container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-auto-columns: 1fr;
+    gap: 2rem 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+        "."
+        "."
+        "."
+        ".";
+    grid-area: macrosList--container;
+    list-style-type: none;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.charts--container {
+    display: grid;
+    grid-template-rows: 0.5fr 1fr;
+    grid-auto-columns: 1fr;
+    gap: 4rem 0px;
+    grid-auto-flow: row;
+    grid-area: charts--container;
+}
+
+.activityChart {
+    grid-area: activityChart;
+}
+
+.charts--wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    gap: 0px 4rem;
+    grid-auto-flow: row;
+    grid-template-areas:
+        ". . .";
+    // grid-area: 2 / 1 / 3 / 2;
+}
+
+
+// section {
+//     display: flex;
+//     flex-direction: column;
+//     height: 100%;
+//     width: 100%;
+//     padding: 2rem 5rem;
+//     row-gap: 2rem;
+// }
+
+// .chart-wrapper {
+//     display: flex;
+//     flex-direction: column;
+//     row-gap: 5rem;
+//     max-width: 100%;
+// }
+
+// .chart-container {
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: space-between;
+//     max-width: 70%;
+// }
