--- a/src/App.scss
+++ b/src/App.scss
@@ -1,42 +1,19 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .main {
   display: flex;
+
+  section {
+      display: flex;
+      flex-direction: column;
+      row-gap: 2rem;
+      margin: 0;
+      padding: 4rem 8rem;
+      overflow: hidden;
+      width: calc(100vw - 7em);
+  
+      @media (max-width: 1199.98px) {
+        width: 100vw;
+        padding: 2rem 0 0 3rem;
+      }
+    }
+
 }
