--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,16 +1,33 @@
-.welcomeMessage {
+.header {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 5rem;
     text-align: left;
-}
-
-.welcomeMessage h1 {
-    font-size: 2.5rem;
-    font-weight: 600;
-    padding: 0;
     margin: 0;
-}
+    padding: 0;
 
-.welcomeMessage p {
-    font-weight: 600;
+    h1 {
+        font-size: 3rem;
+        font-weight: 600;
+        padding: 0;
+        margin: 0;
+    }
+
+    p {
+        font-size: 1.2rem;
+        font-weight: 600;
+    }
+
+    @media (max-width: 1199.98px) {
+        h1 {
+            font-size: 2rem;
+        }
+
+        p {
+            font-size: 1rem;
+            font-weight: 600;
+        }
+    }
 }
 
 .userFirstName {
