--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -2,19 +2,20 @@ header {
     display: flex;
     background: black;
     color: white;
-    width: 100%;
     height: 5em;
+    max-width: 100%;
     align-items: center;
     justify-content: space-between;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
 
-header img {
-    margin-left: 1.5em;
-}
+    img {
+        margin-left: 1.5em;
+    }
 
-header nav {
-    width: 100%;
+    nav {
+        width: 100%;
+    }
+
 }
 
 .navigation ul {
@@ -22,4 +23,8 @@ header nav {
     list-style-type: none;
     justify-content: space-around;
     font-size: 1.5em;
+
+    @media (max-width: 1199.98px) {
+        font-size: 1.25rem;
+    }
 }
