--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -4,9 +4,14 @@ aside {
     background: black;
     color: white;
     min-height: 100vh;
-    width: 7em;
+    max-width: 7em;
     justify-content: space-around;
     justify-items: center;
+    text-align: center;
+
+    @media (max-width: 1024px) {
+        width: 5em;
+    }
 }
 
 .activity ul {
@@ -16,9 +21,19 @@ aside {
     list-style-type: none;
     gap: 1em;
     padding: 0;
+
+    @media (max-width: 1199.98px) {
+        img {
+            width: 60%;
+        }
+    }
 }
 
 .copyright {
     transform: rotate(-90deg);
     white-space: nowrap;
+
+    @media (max-width: 1199.98px) {
+        font-size: 1rem;
+    }
 }
