--- a/src/components/UserMacros/UserMacros.scss
+++ b/src/components/UserMacros/UserMacros.scss
@@ -1,31 +1,62 @@
-.macrosList--container li {
-    display: flex;
-    gap: 1rem;
-    background: #FBFBFB;
-    padding: 1.5em;
-    border-radius: 5px;
-}
-
-.macrosList--container li img {
-    max-width: 100%;
-    max-height: 100%;
-}
-
-.macrosLabel {
+.macrosList--container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    text-align: left;
-}
-
-.macrosLabel p {
+    list-style: none;
+    justify-content: space-between;
     margin: 0;
-    font-weight: 700;
-    font-size: 1.5rem;
-}
+    padding: 0;
+    min-width: 250px;
+    max-width: 30%;
 
-.macrosLabel label {
-    color: #74798C;
-    font-size: 1.25rem;
-    font-weight: 600;
+    li {
+        display: flex;
+        gap: 1rem;
+        background: #FBFBFB;
+        padding: 1.5em;
+        border-radius: 10px;
+
+        img {
+            max-width: 100vw;
+            max-height: 100vh;
+        }
+    }
+
+    .macrosLabel {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: left;
+
+        p {
+            margin: 0;
+            font-weight: 700;
+            font-size: clamp(1rem, 1vw, 1.2rem);
+        }
+
+        label {
+            color: #74798C;
+            font-size: clamp(.8rem, 1vw, 1rem);
+            font-weight: 600;
+        }
+
+    }
+
+    @media (max-width: 1199.98px) {
+        padding-right: 4rem;
+
+        li {
+            gap: 1rem;
+            padding: 1em;
+        }
+
+        .macrosLabel {
+            p {
+                font-size: 1rem;
+            }
+
+            label {
+                font-size: 0.8rem;
+            }
+        }
+    }
 }
