--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,26 +7,15 @@
     padding: 0;
 
     h1 {
-        font-size: 3rem;
+        font-size: min(3em, 3vw);
         font-weight: 600;
         padding: 0;
         margin: 0;
     }
 
     p {
-        font-size: 1.2rem;
+        font-size: min(1.2rem, 1.2vw);
         font-weight: 600;
-    }
-
-    @media (max-width: 1199.98px) {
-        h1 {
-            font-size: 2rem;
-        }
-
-        p {
-            font-size: 1rem;
-            font-weight: 600;
-        }
     }
 }
 
