--- a/src/App.scss
+++ b/src/App.scss
@@ -4,15 +4,12 @@
   section {
       display: flex;
       flex-direction: column;
-      row-gap: 2rem;
+      row-gap: 2em;
       margin: 0;
-      padding: 4rem 8rem;
-      overflow: hidden;
-      width: calc(100vw - 7em);
+      padding: 4rem 0 4rem 5rem;
   
       @media (max-width: 1199.98px) {
-        width: 100vw;
-        padding: 2rem 0 0 3rem;
+        padding: 2rem 3rem;
       }
     }
 
