--- a/src/components/UserMacros/UserMacros.scss
+++ b/src/components/UserMacros/UserMacros.scss
@@ -5,8 +5,6 @@
     justify-content: space-between;
     margin: 0;
     padding: 0;
-    min-width: 250px;
-    max-width: 30%;
 
     li {
         display: flex;
@@ -30,18 +28,21 @@
         p {
             margin: 0;
             font-weight: 700;
-            font-size: clamp(1rem, 1vw, 1.2rem);
+            // font-size: clamp(1rem, 1vw, 1.2rem);
+            font-size: min(1rem, 1vw);
         }
 
         label {
             color: #74798C;
-            font-size: clamp(.8rem, 1vw, 1rem);
+            // font-size: clamp(.8rem, 1vw, 1rem);
+            font-size: min(.8rem, 1vw);
             font-weight: 600;
         }
 
     }
 
     @media (max-width: 1199.98px) {
+        min-width: 250px;
         padding-right: 4rem;
 
         li {
