--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -1,7 +1,7 @@
 .mainContent {
     display: flex;
     flex-direction: row-reverse;
-    justify-content: flex-start;
+    justify-content: space-between;
     margin: 0;
     padding: 0;
     gap: 5rem;
@@ -16,15 +16,13 @@
     display: flex;
     flex-direction: column;
     row-gap: 5rem;
-    width: calc(70vw - 7em);
-    height: fit-content;
+    // width: fit-content;
 }
 
 .charts--wrapper {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: fit-content;
 
         @media (max-width: 1199.98px) {
                 max-width: 600px;
