--- a/src/components/Charts/AverageSessionChart/AverageSession.scss
+++ b/src/components/Charts/AverageSessionChart/AverageSession.scss
@@ -4,20 +4,53 @@
     width: 30%;
     background-color: var(--primary-clr);
     border-radius: 10px;
-    padding: 1rem;
+    padding-bottom: 1rem;
     height: 320px;
+    overflow: hidden;
+    
+        &::before,
+        &::after {
+            content: '';
+            width: calc(10% - 5px);
+            height: 100%;
+            background-color: transparent;
+            position: absolute;
+            top: 0;
+            z-index: 3;
+        }
+    
+        &::before {
+            left: 0;
+        }
+    
+        &::after {
+            right: 0;
+        }
 
     .average-session--label {
         position: absolute;
         text-align: left;
         color: white;
         opacity: 0.6;
-        margin: 1rem;
-        padding: 0;
-        left: 0;
-        inline-size: 140px;
+        padding: 2rem;
+        top: -1.5rem;
+        inline-size: 250px;
         overflow-wrap: break-word;
     }
+
+  .recharts-rectangle {
+      transform: translateY(-5px);
+      z-index: -1;
+      opacity: 0.1;
+  }
+
+  .recharts-surface {
+      transform: scale(1.1);
+  }
+
+  .xAxis {
+      transform: translateY(-10px);
+  }
 
 }
 
@@ -25,11 +58,11 @@
     .backgroundAverageSession{
         max-width: 168px;
         height: 168px;
+        padding-bottom: 0;
     }
 
     .average-session--label {
-        top: -1rem;
-        left: -1rem;
+        left: -1.7rem;
         font-size: 1.1vw;
     }
 }
