--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,25 +1,24 @@
 .header {
     display: flex;
     flex-direction: column;
-    margin-bottom: 5rem;
     text-align: left;
-    margin: 0;
-    padding: 0;
-    // width: 100%;
 
     h1 {
         font-size: min(3em, 3vw);
         font-weight: 600;
-        padding: 0;
         margin: 0;
+
+        .userFirstName {
+            color: #ff0101;
+        }
     }
 
     p {
         font-size: min(1.2rem, 1.2vw);
         font-weight: 600;
     }
-}
 
-.userFirstName {
-    color: #ff0101;
+    @media (max-width: 1199.98px) {
+        
+    }
 }
