--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -5,7 +5,7 @@ aside {
     color: white;
     min-height: 100vh;
     max-width: 7em;
-    justify-content: space-around;
+    justify-content: space-evenly;
     justify-items: center;
     text-align: center;
 
@@ -34,6 +34,7 @@ aside {
 
         .copyright {
             font-size: .8rem;
+            margin: 0;
         }
     }
 }
