--- a/src/components/UserMacros/UserMacros.scss
+++ b/src/components/UserMacros/UserMacros.scss
@@ -10,7 +10,7 @@
         display: flex;
         gap: 1rem;
         background: #FBFBFB;
-        padding: 1.5em;
+        padding: 1.5em 2.5em 1.5em 1.5em;
         border-radius: 10px;
 
         img {
@@ -28,13 +28,11 @@
         p {
             margin: 0;
             font-weight: 700;
-            // font-size: clamp(1rem, 1vw, 1.2rem);
-            font-size: min(1rem, 1vw);
+            font-size: min(2rem, 1vw);
         }
 
         label {
             color: #74798C;
-            // font-size: clamp(.8rem, 1vw, 1rem);
             font-size: min(.8rem, 1vw);
             font-weight: 600;
         }
