--- a/src/routes/App.scss
+++ b/src/routes/App.scss
@@ -2,15 +2,19 @@
   display: flex;
 
   section {
-      display: flex;
-      flex-direction: column;
-      row-gap: 2em;
-      margin: 0;
-      padding: 4rem 0 4rem 5rem;
-  
-      @media (max-width: 1199.98px) {
-        padding: 2rem 3rem;
-      }
-    }
+    display: flex;
+    flex-direction: column;
+    row-gap: 2em;
+    margin: 0;
+    padding: 4em 0 4em 5em;
 
+  }
+
+  @media (max-width: 1199.98px) {
+
+    section {
+      padding: 2em 0 0 3em;
+      row-gap: 1em;
+    }
+  }
 }
